alignment fix

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -722,7 +722,7 @@ footer p {
 }
 
 #subtitle-list li {
-     transform: translate(-7.5vh,-1vh);
+     transform: translate(-4vh,-1vh);
      display: inline-block;
 }
 
